aria fixes on buttons and forms. added an outline to buttons to make them more visible, darkened the background color of buttons.

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ a {
 }
 
   .button {
-    background-color: #1db954; /* Green */
+    background-color: hsl(141, 100%, 22%); 
     border: none;
     border-radius: 20px;
     color: white;
@@ -69,6 +69,7 @@ a {
     text-decoration: none;
     display: inline-block;
     font-size: 18px;
+    border: .5px white solid;
 }
 
 #song-view p {
@@ -92,7 +93,7 @@ a {
     margin-top: 30px;
 }
 
-#band {
+#band-name {
     margin-bottom: 15px;
     border-radius: 15px;
     height: 32px;
@@ -106,6 +107,7 @@ input::placeholder {
 }
 
 #feedback p {
+    transition-delay: 3s;
     font-size: 25px;
 }
 
